Renew swagger and clean up code
