# src/main/resources/swagger.yaml
@@ -2,42 +2,66 @@ swagger: "2.0"
 info:
   description: "Dybov's and Lavrov's blse lab"
   title: "Rubbable api"
-  version: "1.0.0"
+  version: "2.0.0"
 
 
 host: "localhost:8000"
 basePath: "/api"
 
+securityDefinitions:
+  basicAuth:
+    type: basic
+
 schemes:
-- "http"
+  - "http"
 paths:
-  /users/me/:
+  /auth/register/:
+    post:
+      description: "Register a new account"
+      produces:
+        - "application/json"
+
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/UserRegistrationRequest"
+
+      responses:
+        "201":
+          description: "Created"
+          schema:
+            $ref: "#/definitions/UserDto"
+
+        "400":
+          description: "Validation Error"
+          schema:
+            type: string
+
+
+  /user/me/:
     get:
+      security:
+        - basicAuth: [ ]
       description: "Get self user profile info"
       produces:
-      - "application/json"
-      parameters:
-      - name: user-id
-        type: integer
-        in: header
-        required: true
+        - "application/json"
       responses:
         "200":
           description: "Ok"
           schema:
             $ref: "#/definitions/UserDto"
-          
-  /teams/:
+        "401":
+          description: "Unauthorized"
+
+  /user/teams/:
     get:
+      security:
+        - basicAuth: [ ]
       description: "Get teams list"
       produces:
-      - "application/json"
-      parameters:
-      - name: user-id
-        type: integer
-        in: header
-        required: true
-        
+        - "application/json"
+
       responses:
         "200":
           description: "user found"
@@ -49,23 +73,22 @@ paths:
           description: "Validation Error"
           schema:
             type: string
-            
-  /teams/{id}/:
+        "401":
+          description: "Unauthorized"
+
+  /user/teams/{id}/:
     get:
+      security:
+        - basicAuth: [ ]
       description: "Get team by id"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - name: user-id
-        type: integer
-        in: header
-        required: true
-      
-      - name: id
-        in: path
-        type: integer
-        required: true
-        
+        - name: id
+          in: path
+          type: integer
+          required: true
+
       responses:
         "200":
           description: "user found"
@@ -73,20 +96,16 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/TeamDto"
+        "401":
+          description: "Unauthorized"
 
-    
-
-  /tournaments/:
+  /user/tournaments/:
     get:
+      security:
+        - basicAuth: [ ]
       description: "Get all tournaments"
       produces:
-      - "application/json"
-      
-      parameters:
-      - name: user-id
-        type: integer
-        in: header
-        required: true
+        - "application/json"
 
       responses:
         "200":
@@ -95,153 +114,169 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/ListTournamentDto"
-    
+        "401":
+          description: "Unauthorized"
+
+  /moderator/tournaments/:
     post:
+      security:
+        - basicAuth: [ ]
       description: "Create new tournament. 1 <= maxGames, judges.length <= 10, maxGames % 2 == 1"
       produces:
-      - "application/json"
-      
+        - "application/json"
+
       parameters:
-      - name: user-id
-        type: integer
-        in: header
-        required: true
-      - name: body
-        in: body
-        schema: 
-          $ref: "#/definitions/CreateTournamentDto"
-        
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/CreateTournamentDto"
 
       responses:
         "201":
           description: "Created"
           schema:
             $ref: "#/definitions/RetrieveTournamentDto"
-            
+
         "400":
           description: "Validation Error"
           schema:
             type: string
-  
-  /games/{game-id}/approve/:
+        "401":
+          description: "Unauthorized"
+
+  /judge/games/{game-id}/approve/:
     post:
+      security:
+        - basicAuth: [ ]
       description: "Approve game"
       produces:
-      - "application/json"
-      
+        - "application/json"
+
       parameters:
-      - name: user-id
-        type: integer
-        in: header
-        required: true
-      - name: game-id
-        in: path
-        type: integer
-        required: true
-        
+        - name: game-id
+          in: path
+          type: integer
+          required: true
+
 
       responses:
         "201":
           description: "Created"
           schema:
             $ref: "#/definitions/GameDto"
-            
+
         "400":
           description: "Validation Error"
           schema:
             type: string
-  
-  /games/{game-id}/disapprove/:
+        "401":
+          description: "Unauthorized"
+
+  /judge/games/{game-id}/disapprove/:
     post:
+      security:
+        - basicAuth: [ ]
       description: "Disapprove game"
       produces:
-      - "application/json"
-      
+        - "application/json"
+
       parameters:
-      - name: user-id
-        type: integer
-        in: header
-        required: true
-      - name: game-id
-        in: path
-        type: integer
-        required: true
-        
+        - name: game-id
+          in: path
+          type: integer
+          required: true
+
 
       responses:
         "201":
           description: "Created"
           schema:
             $ref: "#/definitions/GameDto"
-            
+
         "400":
           description: "Validation Error"
           schema:
             type: string
-  
-  /matches/{match-id}/play-game/:
+        "401":
+          description: "Unauthorized"
+
+  /moderator/matches/{match-id}/play-game/:
     post:
+      security:
+        - basicAuth: [ ]
       description: "Add game to match"
       produces:
-      - "application/json"
-      
+        - "application/json"
+
       parameters:
-      - name: user-id
-        type: integer
-        in: header
-        required: true
-      - name: match-id
-        in: path
-        type: integer
-        required: true
-      
-      - name: winnerId
-        in: query
-        type: integer
-        required: true
-        
+        - name: match-id
+          in: path
+          type: integer
+          required: true
+
+        - name: winnerId
+          in: query
+          type: integer
+          required: true
+
 
       responses:
         "201":
           description: "Created"
           schema:
             $ref: "#/definitions/MatchDto"
-            
+
         "400":
           description: "Validation Error"
           schema:
             type: string
-            
-  /matches/{match-id}/drop/:
+        "401":
+          description: "Unauthorized"
+
+  /moderator/matches/{match-id}/drop/:
     post:
+      security:
+        - basicAuth: [ ]
       description: "Drop match games"
       produces:
-      - "application/json"
-      
+        - "application/json"
+
       parameters:
-      - name: user-id
-        type: integer
-        in: header
-        required: true
-      - name: match-id
-        in: path
-        type: integer
-        required: true
-      
+        - name: match-id
+          in: path
+          type: integer
+          required: true
+
       responses:
         "200":
           description: "Ok"
           schema:
             $ref: "#/definitions/RetrieveTournamentDto"
-            
+
         "400":
           description: "Validation Error"
           schema:
-            type: string  
-  
-  
+            type: string
+        "401":
+          description: "Unauthorized"
+
+
 
 definitions:
+
+  UserRegistrationRequest:
+    type: "object"
+    properties:
+      username:
+        type: "string"
+      password:
+        type: "string"
+      roles:
+        type: "array"
+        items:
+          type: "string"
+          enum: [ "USER", "MODERATOR", "JUDGE" ]
+
   UserDto:
     type: "object"
     properties:
@@ -250,7 +285,7 @@ definitions:
       username:
         type: "string"
 
-  
+
   TeamDto:
     type: "object"
     properties:
@@ -258,7 +293,7 @@ definitions:
         type: "integer"
       name:
         type: "string"
-        
+
   ListTournamentDto:
     type: "object"
     properties:
@@ -273,9 +308,9 @@ definitions:
       maxGames:
         type: "integer"
       winner:
-          $ref: "#/definitions/TeamDto"
-  
-  
+        $ref: "#/definitions/TeamDto"
+
+
   GameVoteDto:
     type: "object"
     properties:
@@ -285,7 +320,7 @@ definitions:
         type: "integer"
       isApproved:
         type: "boolean"
-  
+
   GameDto:
     type: "object"
     properties:
@@ -297,7 +332,7 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/GameVoteDto"
-        
+
   MatchDto:
     type: "object"
     properties:
@@ -313,8 +348,8 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/GameDto"
-    
-  
+
+
   RetrieveTournamentDto:
     type: "object"
     properties:
@@ -323,7 +358,7 @@ definitions:
       name:
         type: "string"
       winner:
-          $ref: "#/definitions/TeamDto"
+        $ref: "#/definitions/TeamDto"
       startDate:
         type: "string"
       approvalRatio:
@@ -342,7 +377,7 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/MatchDto"
-  
+
   CreateTournamentDto:
     type: "object"
     properties:
@@ -365,7 +400,7 @@ definitions:
         items:
           type: "integer"
 
-      
-  
+
+
 
 
